tests/baselines/reference/baseClassExpressionOutOfOrder.errors.txt
tests/cases/compiler/baseClassExpressionOutOfOrder.ts(1,25): error TS2653: Base expression references type before it is declared.
tests/cases/compiler/baseClassExpressionOutOfOrder.ts(3,24): error TS2653: Base expression references type before it is declared.


==== tests/cases/compiler/baseClassExpressionOutOfOrder.ts (2 errors) ====
    var c = class A extends B {
                            ~
!!! error TS2653: Base expression references type before it is declared.
    }
    var c2 = class extends B {
                           ~
!!! error TS2653: Base expression references type before it is declared.
    }
    
    class B {
    }